2015-04-02 Nik Nyby <nikolas@gnu.org>
	* Remove the draggable complain banner functionality.

2015-01-17 Nik Nyby <nikolas@gnu.org>
	* Include the Eclipse Public License in license definitions.
	Thanks to Daniel Ziltener for the patch.

	* Fixed a bug that caused the main panel to disappear after
	clicking the red "Whitelist" button on a script that wasn't
	accepted by LibreJS.

2014-12-06 Nik Nyby <nikolas@gnu.org>
	* You can now specify multiple licenses for a JavaScript file
	that's been compiled or concatenated from more than one source
	file. Info on how to do this is in the manual - search for
	"Specifying multiple licenses". Thanks to Arne Möhle for
	starting a discussion that led to this change.

2014-12-06 Nik Nyby <nikolas@gnu.org>
	* You can now move the "Complain" button out of the way if it's
	blocking something on the website you're looking at. Thanks to
	Alexandre Garreau for pointing out this problem.

2014-12-01 Nik Nyby <nikolas@gnu.org>
	* Applied a patch from Lutz Horn: updating the whitelisted
	scripts to include some more libraries, and improving the
	gethash.sh script.

2014-11-30 Nik Nyby <nikolas@gnu.org>
	* Add support for using the BSD 3-Clause license in a JavaScript
	Web Labels table. Thanks to Enoch Root for pointing out that this
	wasn't working.
	* Add a "Web Labels pages being used for this session" list on
	the main display panel.

2014-11-20 Nik Nyby <nikolas@gnu.org>
	* Recognize the JS Web Labels link with data-jslicense=1, as
	well as rel="jslicense", in case you want the page to be
	HTML5-valid. Savannah ticket #13366. Thanks to Marco Bresciani
	for bringing this up.
	* Fixed a bug on the whitelist page (Tools -> LibreJS) where
	the "Reset whitelist to default" button wasn't working.

2014-11-10 Nik Nyby <nikolas@gnu.org>
	* LibreJS now works in private browsing mode, and with Tor.
	* The complaint email's default subject and body are now
	configurable.

2014-11-03 Nik Nyby <nikolas@gnu.org>